<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_shopping_list_add"
        android:title="@string/action_add_shopping_item"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_shopping_list_sort_by_name"
        android:title="@string/action_sort_by_name"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_shopping_list_sort_by_color"
        android:title="@string/action_sort_by_color"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_shopping_list_toggle_color"
        android:title="@string/action_toggle_color"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_shopping_list_clear"
        android:title="@string/action_clear"
        app:showAsAction="never"/>
</menu>