<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_recipe_list_add"
        android:title="@string/action_add_recipe"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_recipe_list_sort_by_name"
        android:title="@string/action_sort_by_name"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_recipe_list_sort_by_tags"
        android:title="@string/action_sort_by_tags"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_recipe_list_clear"
        android:title="@string/action_clear"
        app:showAsAction="never"/>
</menu>