<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2017 John Magdalinos

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

   	http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License. -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_edit_ingredient_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_banner.large.color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_text_margin_inner">

            <TextView
                android:id="@+id/tv_edit_ingredient_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ingredient_list_header_name"
                style="@style/dialog_title"/>

            <EditText
                android:id="@+id/et_edit_ingredient_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ingredient_list_item_hint_name"
                style="@style/dialog_edit_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_edit_ingredient_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ingredient_list_header_quantity"
                style="@style/dialog_title"/>

            <EditText
                android:id="@+id/et_edit_ingredient_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                android:hint="@string/ingredient_list_item_hint_quantity"
                style="@style/dialog_edit_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_edit_ingredient_measure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ingredient_list_header_measure"
                style="@style/dialog_title"/>

            <Spinner
                android:id="@+id/sp_edit_ingredient_measure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ingredient_list_item_hint_measure"
                style="@style/dialog_edit_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_edit_ingredient_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ingredient_list_header_notes"
                style="@style/dialog_title"/>

            <EditText
                android:id="@+id/et_edit_ingredient_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ingredient_list_item_hint_comments"
                style="@style/dialog_edit_text"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_edit_ingredient_color_picker_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_text_margin_inner"
            android:text="@string/dialog_color_picker_title"
            android:visibility="gone"
            style="@style/dialog_select_color_title"/>

        <include
            android:layout_marginTop="@dimen/dialog_text_margin_inner"
            android:id="@+id/in_edit_ingredient"
            layout="@layout/color_picker"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>