<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2017 John Magdalinos

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

   	http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License. -->

<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:rowCount="2"
    android:columnCount="3"
    android:layout_gravity="center"
    android:gravity="center">

    <ImageButton
        android:id="@+id/edit_color_0"
        android:layout_width="@dimen/ingredient_edit_color_picker_background_size"
        android:layout_height="@dimen/ingredient_edit_color_picker_background_size"
        android:background="@drawable/ingredient_color_state_selector"
        android:contentDescription="@string/content_description_color_green"
        android:src="@drawable/ingredient_color_circle_0"/>

    <ImageButton
        android:id="@+id/edit_color_1"
        android:layout_width="@dimen/ingredient_edit_color_picker_background_size"
        android:layout_height="@dimen/ingredient_edit_color_picker_background_size"
        android:background="@drawable/ingredient_color_state_selector"
        android:contentDescription="@string/content_description_color_yellow"
        android:src="@drawable/ingredient_color_circle_1"/>

    <ImageButton
        android:id="@+id/edit_color_2"
        android:layout_width="@dimen/ingredient_edit_color_picker_background_size"
        android:layout_height="@dimen/ingredient_edit_color_picker_background_size"
        android:background="@drawable/ingredient_color_state_selector"
        android:contentDescription="@string/content_description_color_purple"
        android:src="@drawable/ingredient_color_circle_2"/>

    <ImageButton
        android:id="@+id/edit_color_3"
        android:layout_width="@dimen/ingredient_edit_color_picker_background_size"
        android:layout_height="@dimen/ingredient_edit_color_picker_background_size"
        android:background="@drawable/ingredient_color_state_selector"
        android:contentDescription="@string/content_description_color_blue"
        android:src="@drawable/ingredient_color_circle_3"/>

    <ImageButton
        android:id="@+id/edit_color_4"
        android:layout_width="@dimen/ingredient_edit_color_picker_background_size"
        android:layout_height="@dimen/ingredient_edit_color_picker_background_size"
        android:background="@drawable/ingredient_color_state_selector"
        android:contentDescription="@string/content_description_color_red"
        android:src="@drawable/ingredient_color_circle_4"/>

    <ImageButton
        android:id="@+id/edit_color_5"
        android:layout_width="@dimen/ingredient_edit_color_picker_background_size"
        android:layout_height="@dimen/ingredient_edit_color_picker_background_size"
        android:background="@drawable/ingredient_color_state_selector"
        android:contentDescription="@string/content_description_color_grey"
        android:src="@drawable/ingredient_color_circle_5"/>

</GridLayout>